
set( IC3_GRAPHICS_GCI_SRC_FILES
    "../Common/GraphicsCoreMetrics.h"

    "Prerequisites/CommonTypes.h"
    "Prerequisites/CoreInterfaceDefs.h"
    "Prerequisites/CoreInterfaceDefs.cpp"
    "Prerequisites/GCITypeInfo.h"
    "Prerequisites/GPUDataFormats.h"
    "Prerequisites/VertexAttribFormatUtils.h"

    "Prerequisites.h"
    "Prerequisites.cpp"

    "CommonCommandDefs.h"
    "CommandContext.h"
    "CommandContext.cpp"
    "CommandList.h"
    "CommandList.cpp"
    "CommandListImplRenderPassGeneric.h"
    "CommandListImplRenderPassGeneric.cpp"
    "CommandSystem.h"
    "CommandSystem.cpp"
    "DisplayCommon.h"
    "DisplayManager.h"
    "DisplayManager.cpp"
    "GPUDevice.h"
    "GPUDevice.cpp"
    "GPUDeviceFeatureQuery.h"
    "GPUDeviceFeatureQuery.cpp"
    "GPUDeviceNull.h"
    "GPUDriver.h"
    "GPUDriver.cpp"
    "GPUDriverAPI.h"
    "GPUDriverNull.h"
    "GPUDriverPlugin.h"
    "GPUUtils.h"
    "GPUUtils.cpp"
    "GPUCapabilities.h"
    "PresentationLayer.h"
    "PresentationLayer.cpp"

    "Memory/CommonGPUMemoryDefs.h"
    "Memory/CommonGPUMemoryDefs.cpp"
    "Memory/GPUMemoryAllocator.h"
    "Memory/GPUMemoryAllocator.cpp"
    "Memory/GPUMemoryHeap.h"
    "Memory/GPUMemoryHeap.cpp"
    "Memory/GPUMemoryPool.h"
    "Memory/GPUMemoryPool.cpp"
    "Memory/GPUMemoryRef.h"
    "Memory/GPUMemoryRef.cpp"

    "Resources/CommonGPUResourceDefs.h"
    "Resources/GPUBuffer.h"
    "Resources/GPUBuffer.cpp"
    "Resources/GPUBufferReference.h"
    "Resources/GPUBufferReference.cpp"
    "Resources/GPUBufferCommon.h"
    "Resources/GPUBufferCommon.cpp"
    "Resources/GPUResource.h"
    "Resources/GPUResource.cpp"
    "Resources/RenderTargetTexture.h"
    "Resources/RenderTargetTexture.cpp"
    "Resources/Shader.h"
    "Resources/Shader.cpp"
    "Resources/ShaderCommon.h"
    "Resources/ShaderInputTexture.cpp"
    "Resources/ShaderInputTexture.h"
    "Resources/Texture.h"
    "Resources/Texture.cpp"
    "Resources/TextureCommon.h"
    "Resources/TextureCommon.cpp"
    "Resources/TextureDimensions.h"
    "Resources/TextureDimensions.cpp"
    "Resources/TextureReference.h"
    "Resources/TextureReference.cpp"

    "State/CommonGPUStateDefs.h"
    "State/CommonGPUStateDefs.cpp"
    "State/CommonGraphicsConfig.h"
    "State/CommonGraphicsConfig.cpp"

    "State/ComputePipelineStateCommon.h"
    "State/ComputePipelineStateCommon.cpp"

    "State/GraphicsPipelineStateCommon.h"
    "State/GraphicsPipelineStateCommon.cpp"
    "State/GraphicsPipelineStateController.h"
    "State/GraphicsPipelineStateController.inl"
    "State/GraphicsPipelineStateController.cpp"
    "State/PipelineStateDescriptorCache.h"
    "State/PipelineStateDescriptorCache.cpp"
    "State/GraphicsPipelineStateDescriptorCommon.h"
    "State/GraphicsPipelineStateDescriptorCommon.cpp"
    "State/GraphicsPipelineStateDescriptorIA.h"
    "State/GraphicsPipelineStateDescriptorIA.cpp"
    "State/GraphicsPipelineStateDescriptorIADynamic.h"
    "State/GraphicsPipelineStateDescriptorIADynamic.cpp"
    "State/GraphicsPipelineStateDescriptorRTArrayCommon.h"
    "State/GraphicsPipelineStateDescriptorRTO.h"
    "State/GraphicsPipelineStateDescriptorRTO.cpp"
    "State/GraphicsPipelineStateDescriptorRTODynamic.h"
    "State/GraphicsPipelineStateDescriptorRTODynamic.cpp"
    "State/GraphicsPipelineStateDescriptorShader.h"
    "State/GraphicsPipelineStateDescriptorShader.cpp"
    "State/GraphicsPipelineStateImplRenderPassGeneric.h"
    "State/GraphicsPipelineStateImplRenderPassGeneric.cpp"
    "State/GraphicsPipelineStateImplSeparableState.h"
    "State/GraphicsPipelineStateImplSeparableState.inl"
    "State/GraphicsPipelineStateImplSeparableState.cpp"

    "State/GraphicsShaderDefs.h"
    "State/GraphicsShaderDefs.cpp"

    "State/InputAssemblerCommon.h"
    "State/InputAssemblerCommon.cpp"
    "State/RenderPassCommon.h"
    "State/RenderPassCommon.cpp"
    "State/RenderTargetArrayUtils.h"
    "State/RenderTargetCommon.h"
    "State/RenderTargetCommon.cpp"
    "State/Sampler.h"
    "State/Sampler.cpp"
    "State/SamplerCommon.h"
    "State/SamplerCommon.cpp"
    "State/RootSignature.h"
    "State/RootSignature.cpp"

    "State/PipelineStateCommon.h"
    "State/PipelineStateCommon.cpp"
    "State/PipelineStateController.h"
    "State/PipelineStateController.cpp"
    "State/PipelineStateDescriptor.h"
    "State/PipelineStateDescriptor.cpp"
    "State/PipelineStateDescriptorCacheUnit.h"
    "State/PipelineStateDescriptorCacheUnit.cpp"
    "State/PipelineStateDescriptorDynamic.h"
    "State/PipelineStateDescriptorFactory.h"
    "State/PipelineStateDescriptorFactory.cpp"
    "State/PipelineStateDescriptorManager.h"
    "State/PipelineStateDescriptorManager.cpp"
    "State/PipelineStateDescriptorRootSignature.h"
    "State/PipelineStateDescriptorRootSignature.cpp"
    "State/PipelineStateImplRootSignatureGeneric.h"
    "State/PipelineStateImplRootSignatureGeneric.cpp"

    "State/ShaderInputSignature.h"
    "State/ShaderInputSignature.cpp"

    "TypeInfo/TPIDefsGCIEnum.cpp"

    "Utilities/DSTRenderTargetBinding.h"
    "Utilities/DSTVertexAttributeLayout.h"
    "Utilities/DSTVertexSourceBinding.h"

)

ic3AddCoreLib( Ic3.Graphics.GCI ${IC3_GRAPHICS_GCI_SRC_FILES} )

target_link_libraries( Ic3.Graphics.GCI PUBLIC
        Ic3.CoreLib
        Ic3.System )
